@@ -3,6 +3,8 @@ Version 3.3.1 (2010-xx-xx)
 	Fixed bug where it wasn't possible to toggle off blockquotes.
 	Fixed bug where an undo level wasn't produced when applying formatting using the styles dropdown.
 	Fixed bug where IE 6/7 wouldn't perform caret formatting due to a focus/event bug in IE.
+	Fixed bug where undo/redo wasn't restoring the previous selection correctly.
+	Fixed so the matchNode method of the Formatter class returns the matched format rule.
 Version 3.3 (2010-03-10)
 	Fixed bug where backspace on a table on IE would produce an empty tbody and some JS exceptions.
 	Fixed bug where some redundant children wasn't removed properly when applying inline styles to them.
